src/objects/FedRAMP_Continuous_Monitoring__c.object
<CustomObject>
    <description>Continuous Monitoring object for FedRAMP application to track Continuous Monitoring on Packages</description>
    <fields>
        <fullName>CSP_Days_Late__c</fullName>
        <inlineHelpText>Number of days the CSP is past the ConMon deliverable due date</inlineHelpText>
        <label>CSP Days Late</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSP_Submission_Due_Date__c</fullName>
        <inlineHelpText>Date ConMon deliverables are due</inlineHelpText>
        <label>CSP Submission Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CSP_Submitted_Date__c</fullName>
        <inlineHelpText>Date CSP submitted ConMon</inlineHelpText>
        <label>CSP Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CSP_Total_Days__c</fullName>
        <inlineHelpText>Total Days CSP Required to Complete ConMon activites during the month</inlineHelpText>
        <label>CSP Total Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ConMon_Activity__c</fullName>
        <label>ConMon Activity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Routine ConMon</fullName>
                </value>
                <value>
                    <fullName>System Change</fullName>
                </value>
                <value>
                    <fullName>Significant Change</fullName>
                </value>
                <value>
                    <fullName>Annual Assessment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ISSO_Total_Days__c</fullName>
        <inlineHelpText>Total Days ISSO Required to Complete ConMon activites during the month</inlineHelpText>
        <label>ISSO Total Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JAB_Total_Days__c</fullName>
        <label>JAB Total Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <inlineHelpText>Month the ConMon activity occured</inlineHelpText>
        <label>Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Jan</fullName>
                </value>
                <value>
                    <fullName>Feb</fullName>
                </value>
                <value>
                    <fullName>Mar</fullName>
                </value>
                <value>
                    <fullName>Apr</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>Jun</fullName>
                </value>
                <value>
                    <fullName>Jul</fullName>
                </value>
                <value>
                    <fullName>Aug</fullName>
                </value>
                <value>
                    <fullName>Sep</fullName>
                </value>
                <value>
                    <fullName>Oct</fullName>
                </value>
                <value>
                    <fullName>Nov</fullName>
                </value>
                <value>
                    <fullName>Dec</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Package__c</fullName>
        <label>Package</label>
        <referenceTo>FedRAMP_Package__c</referenceTo>
        <relationshipLabel>Continuous Monitoring</relationshipLabel>
        <relationshipName>Continuous_Monitoring</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <inlineHelpText>Year the ConMon activity occured</inlineHelpText>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2009</fullName>
                </value>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Continuous Monitoring</label>
    <nameField>
        <displayFormat>ConMon-{00000}</displayFormat>
        <label>Continuous Monitoring Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Continuous Monitoring</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cannot_create_with_out_PATO_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISNEW( ), ISNULL( Package__r.PATO_Approved_Date__c ) )</errorConditionFormula>
        <errorMessage>Continuous Monitoring records cannot be created without a P-ATO Date on the package</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Dates_and_ISSO_Days_complete</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
AND(ISPICKVAL( Status__c , &quot;Completed&quot;), ISBLANK( CSP_Submission_Due_Date__c )),
AND(ISPICKVAL( Status__c , &quot;Completed&quot;), ISBLANK(  CSP_Submitted_Date__c )),
AND(ISPICKVAL( Status__c , &quot;Completed&quot;), ISBLANK(   ISSO_Total_Days__c ))
)</errorConditionFormula>
        <errorMessage>Please make sure CSP Submission Due Date, CSP Submitted Date, and ISSO Total Days are filled in before setting Status to Completed</errorMessage>
    </validationRules>
</CustomObject>